feat:Add footer's structure and styles

--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,18 @@ a:hover {
 .category {
   font-size: 0.75rem;
   margin-top: -1rem;
+}
+
+footer {
+  background-color: #e5e5e5;
+  font-size: 0.9rem;
+}
+footer .col-12 {
+  margin-bottom: -0.7rem;
+}
+footer .col-12 a {
+  color: #2f3ab2;
+}
+footer .col-12 a.link-hover:hover {
+  text-decoration: underline;
 }/*# sourceMappingURL=style.css.map */
