--- a/css/style.scss
+++ b/css/style.scss
@@ -14,14 +14,16 @@
 a {
     text-decoration: none;
     color: #090909;
-    &:hover{
+
+    &:hover {
         color: #2f3ab2;
     }
 }
 
 .bg-card {
     background-color: #fafafa;
-    &:hover{
+
+    &:hover {
         background-color: white;
     }
 }
@@ -29,4 +31,21 @@ a {
 .category {
     font-size: 0.75rem;
     margin-top: -1rem;
+}
+
+footer {
+    background-color: #e5e5e5;
+    font-size: 0.9rem;
+
+    .col-12 {
+        margin-bottom: -0.7rem;
+
+        a {
+            color: #2f3ab2;
+
+            &.link-hover:hover {
+                text-decoration: underline;
+            }
+        }
+    }
 }
