--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #f5f5f5;
+}
+
 .btn-principal {
   background-color: #2f3ab2;
   color: white;
@@ -19,16 +23,36 @@ a:hover {
   color: #2f3ab2;
 }
 
-.bg-card {
-  background-color: #fafafa;
-}
-.bg-card:hover {
-  background-color: white;
-}
-
 .category {
   font-size: 0.75rem;
   margin-top: -1rem;
+}
+
+.aside-left-post button {
+  margin-bottom: -0.75rem;
+}
+
+#like-icon:hover {
+  fill: red;
+  border-radius: 50%;
+  background-color: rgba(255, 0, 0, 0.2666666667);
+}
+
+#comments-icon:hover {
+  fill: rgb(255, 217, 0);
+  border-radius: 50%;
+  background-color: rgba(255, 217, 0, 0.3490196078);
+}
+
+#save-icon:hover {
+  fill: #2f3ab2;
+  border-radius: 50%;
+  background-color: rgba(47, 58, 178, 0.2117647059);
+}
+
+#show-more-icon:hover {
+  border-radius: 50%;
+  background-color: #e5e5e5 !important;
 }
 
 footer {
