--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,10 @@
+.site-logo{
+    display:inline-block;
+    .site-logo__img{
+        width: 40px;
+    }
+}
+
 .btn-principal {
     background-color: #2f3ab2;
     color: white;
