--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,15 @@
-.site-logo {
-  display: inline-block;
+.name-font {
+  font-size: small;
 }
-.site-logo .site-logo__img {
-  width: 40px;
+
+.date-font {
+  color: grey;
+  font-size: smaller;
+  font-style: normal;
+}
+
+.site-logo__img {
+  width: 50px;
 }
 
 .prof-img {
@@ -12,6 +19,23 @@
 .btn-principal {
   background-color: #2f3ab2;
   color: white;
+}
+
+.btn-secundario {
+  color: #2f3ab2;
+  background-color: white;
+  border-color: #2f3ab2;
+}
+
+.btn-terciario {
+  color: gray;
+}
+
+.hash1, .hash2, .hash3, .hash4 {
+  border: none;
+}
+.hash1:hover, .hash2:hover, .hash3:hover, .hash4:hover {
+  background-color: lightgray;
 }
 
 .btn-gray {
