--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,9 @@
     font-style: normal;
 }
 
+.body{
+    background-color: grey;
+}
 .site-logo__img{
         width: 50px;
 }
@@ -17,12 +20,12 @@
     background-color: #2f3ab2;
     color: white;
 }
-.btn-secundario {
+.btn-second {
     color: #2f3ab2;
     background-color: white;
     border-color: #2f3ab2;
 }
-.btn-terciario {
+.btn-third {
     color:gray;
 }
 .hash1, .hash2, .hash3, .hash4 {
