feat:Add left aside, add left aside card and lists

--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,15 @@
     border-radius: .5rem;
     padding-left: 10px;
 }
+.rainbow-logo{
+    width: 20px;
+}
+.book-icon{
+    width: 20px;
+}
+.think-emoji{
+    width: 20px;
+}
 .prof-img {
     width: 40px;
 }
