--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,18 @@
   padding-left: 10px;
 }
 
+.rainbow-logo {
+  width: 20px;
+}
+
+.book-icon {
+  width: 20px;
+}
+
+.think-emoji {
+  width: 20px;
+}
+
 .prof-img {
   width: 40px;
 }
