--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ body {
   color: white;
 }
 
-.btn-gray {
+.btn-gray,
+.bg-gray {
   background-color: #d6d6d7;
 }
 
@@ -26,6 +27,16 @@ a:hover {
 .category {
   font-size: 0.75rem;
   margin-top: -1rem;
+}
+.category.category-button:hover {
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: lightgrey;
+}
+.category.category-button:hover:last-of-type {
+  border: 1px solid mediumseagreen;
+  background-color: palegreen;
 }
 
 .aside-left-post button {
@@ -53,6 +64,23 @@ a:hover {
 #show-more-icon:hover {
   border-radius: 50%;
   background-color: #e5e5e5 !important;
+}
+
+.post-data-img a.position-absolute {
+  top: 20px;
+  left: 20px;
+}
+
+article .article-main {
+  font-size: 20px;
+}
+article .article-main .card li p {
+  color: #090909;
+}
+
+article .card li:last-of-type p {
+  background-color: #2f3ab2;
+  color: white;
 }
 
 footer {
