feat:Add flex-wrap to footer listing

--- a/css/style.scss
+++ b/css/style.scss
@@ -181,6 +181,10 @@ article {
     top: 20px;
 }
 
+h2.ct-post{
+    margin-left: 4rem;
+}
+
 footer {
     background-color: #e5e5e5;
     font-size: 0.9rem;
@@ -197,3 +201,4 @@ footer {
         }
     }
 }
+
